--- a/src/assets/styles/_material.scss
+++ b/src/assets/styles/_material.scss
@@ -35,3 +35,14 @@
 }
 
 /* Mat dialog styles */
+
+// =========================================
+
+// Mat Button styles
+
+.mat-button-disabled {
+  color: #ffffff !important;
+  background: #cad2da !important;
+}
+
+// Mat Button styles
