--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.html
@@ -2,11 +2,7 @@
   <div class="car-info-container-title">Информация об автомобиле</div>
   <div class="car-info-container-content">
     <div class="car-info-details">
-      <form
-        class="car-info-details-form"
-        [formGroup]="formCarOptions"
-        (ngSubmit)="onSubmitForm(formCarOptions)"
-      >
+      <form class="car-info-details-form" [formGroup]="formCarOptions">
         <div class="car-info-form-container">
           <div class="car-info-item">
             <label class="car-info-item__label" for="VIN">VIN</label>
@@ -41,9 +37,7 @@
                 formCarOptions.controls['car_mark'].invalid
               "
             >
-              <small
-                *ngIf="formCarOptions.controls['car_mark'].invalid"
-              >
+              <small *ngIf="formCarOptions.controls['car_mark'].invalid">
                 Введите марку авто</small
               >
             </div>
@@ -62,9 +56,7 @@
                 formCarOptions.controls['car_model'].invalid
               "
             >
-              <small
-                *ngIf="formCarOptions.controls['car_model'].invalid"
-              >
+              <small *ngIf="formCarOptions.controls['car_model'].invalid">
                 Введите модель авто</small
               >
             </div>
@@ -85,9 +77,7 @@
                 formCarOptions.controls['car_year'].invalid
               "
             >
-              <small
-                *ngIf="formCarOptions.controls['car_year'].invalid"
-              >
+              <small *ngIf="formCarOptions.controls['car_year'].invalid">
                 Введите год выпуска авто</small
               >
             </div>
@@ -106,9 +96,7 @@
                 formCarOptions.controls['pts_issue_year'].invalid
               "
             >
-              <small
-                *ngIf="formCarOptions.controls['pts_issue_year'].invalid"
-              >
+              <small *ngIf="formCarOptions.controls['pts_issue_year'].invalid">
                 Введите год выпуска авто из ПТС</small
               >
             </div>
@@ -129,9 +117,7 @@
                 formCarOptions.controls['engine_capacity'].invalid
               "
             >
-              <small
-                *ngIf="formCarOptions.controls['engine_capacity'].invalid"
-              >
+              <small *ngIf="formCarOptions.controls['engine_capacity'].invalid">
                 Введите объем двигателя</small
               >
             </div>
@@ -152,9 +138,7 @@
                 formCarOptions.controls['transmission'].invalid
               "
             >
-              <small
-                *ngIf="formCarOptions.controls['transmission'].invalid"
-              >
+              <small *ngIf="formCarOptions.controls['transmission'].invalid">
                 Выберите тип КПП</small
               >
             </div>
@@ -271,10 +255,13 @@
             </div>
           </div>
         </div>
+
         <div class="car-info-details-form__button">
-          <button type="submit" class="car-info-details__btn btn-default">
-            Далее
-          </button>
+          <app-submit-form-button
+            [formValues]="formCarOptions.value"
+            [isDisable]="!formCarOptions.valid"
+            buttonText="Далее"
+          ></app-submit-form-button>
         </div>
       </form>
     </div>
