--- a/src/app/pages/calculation-loan-page/components/car-info/car-info.component.scss
+++ b/src/app/pages/calculation-loan-page/components/car-info/car-info.component.scss
@@ -19,318 +19,324 @@
     color: #343e48;
   }
 }
-  .car-info-details {
+.car-info-details {
+  width: 100%;
+  align-items: flex-start;
+  padding: 0px 0px 6px;
+  gap: 18px;
 
-    width: 100%;
+  &__slider {
+    position: relative;
+  }
+
+  &__btn {
+    background: #343e48;
+    border-radius: 6px;
+    width: 213px;
+    height: 52px;
+    color: #ffffff;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 121%;
+  }
+
+  .car-info-details-form {
+    height: 100%;
+    display: flex;
+    flex-direction: row;
     align-items: flex-start;
     padding: 0px 0px 6px;
     gap: 18px;
+    color: #343e48;
+    margin-left: 35px;
+    flex-wrap: wrap;
 
-    &__slider{
-      position: relative;
-    }
-
-    &__btn {
-      background: #343E48;
-      border-radius: 6px;
-      width: 213px;
-      height: 52px;
-      color: #FFFFFF;
-      font-weight: 500;
-      font-size: 20px;
-      line-height: 121%;
-    }
-
-    .car-info-details-form {
-      height: 100%;
+    &__button {
+      height: 20vh;
+      width: 100%;
       display: flex;
-      flex-direction: row;
-      align-items: flex-start;
-      padding: 0px 0px 6px;
-      gap: 18px;
-      color: #343e48;
-      margin-left: 35px;
-      flex-wrap: wrap;
+      justify-content: flex-end;
+      align-items: flex-end;
 
-      &__button {
-        height: 20vh;
-        width: 100%;
-        display: flex;
-        justify-content: flex-end;
-        align-items: flex-end;
+      // КНОПКИ МОЖНО ВЫНЕСТИ В ОДЕЛЬНУЮ КОМПОНЕНТУ И ПЕРЕИСПОЛЬЗОВАТЬ!
+      .next-page__button {
+        align-self: flex-end;
+        margin-top: 70px;
+        font-weight: 500;
+        font-size: 20px;
+        line-height: 24px;
+        background: #343e48;
+        padding: 14px 76px;
+        border-radius: 6px;
+        color: #ffffff;
       }
+    }
 
-      .car-info-item {
-        display: flex;
-        flex-direction: column;
-        width: 15vw;
+    .car-info-item {
+      display: flex;
+      flex-direction: column;
+      width: 15vw;
+      height: 74px;
+      border-bottom: 1px solid #cad2da;
+
+      &__radio {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        width: 340px;
         height: 74px;
-        border-bottom: 1px solid #CAD2DA;
+        gap: 5px;
 
-
-        &__radio {
-          display: grid;
-          grid-template-columns: 1fr 1fr 1fr;
-          width: 340px;
-          height: 74px;
-          gap: 5px;
-
-          &__button {
+        &__button {
           display: none;
-          }
+        }
 
-          &__button:checked + &__label {
-              border-radius: 10px;
-              background: #72879E;
-          }
-
-          &__label {
-            border-radius: 10px;
-            background-color: #F2F4F7;
-            text-align: center;
-            margin-bottom: 10px;
-            padding: 6px 10px;
-            font-family: 'Gilroy';
-            font-style: normal;
-            font-weight: 500;
-            font-size: 16px;
-            line-height: 140%;
-
-            &__telematic {
-              font-family: 'Gilroy';
-              font-style: normal;
-              font-weight: 500;
-              font-size: 14px;
-              line-height: 130%;
-              color: #343E48;
-              margin-left: 4px;
-            }
-          }
+        &__button:checked + &__label {
+          border-radius: 10px;
+          background: #72879e;
         }
 
         &__label {
-          display: inline-flex;
-          width: 15vw;
-          height: 13px;
-          font-family: 'Gilroy';
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 130%;
-          color: #343E48;
-          margin-bottom: 18px;
-
-          
-          &__toggle {
-            margin-left: 10px;
-            margin-bottom: 0px;
-          }
-        }
-
-        &__input {
+          border-radius: 10px;
+          background-color: #f2f4f7;
+          text-align: center;
+          margin-bottom: 10px;
+          padding: 6px 10px;
           font-family: 'Gilroy';
           font-style: normal;
           font-weight: 500;
-          font-size: 18px;
-          line-height: 21px;
-          color: #343E48;
+          font-size: 16px;
+          line-height: 140%;
 
           &__telematic {
-            margin-right: 14px;
-          }
-
-          &__range {
-            margin-top: 12px;
+            font-family: 'Gilroy';
+            font-style: normal;
+            font-weight: 500;
+            font-size: 14px;
+            line-height: 130%;
+            color: #343e48;
+            margin-left: 4px;
           }
         }
       }
-    }
-      &__form__input {
+
+      &__label {
+        display: inline-flex;
         width: 15vw;
+        height: 13px;
+        font-family: 'Gilroy';
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 130%;
+        color: #343e48;
+        margin-bottom: 18px;
+
+        &__toggle {
+          margin-left: 10px;
+          margin-bottom: 0px;
+        }
       }
+
+      &__input {
+        font-family: 'Gilroy';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 18px;
+        line-height: 21px;
+        color: #343e48;
+
+        &__telematic {
+          margin-right: 14px;
+        }
+
+        &__range {
+          margin-top: 12px;
+        }
+      }
+    }
+  }
+  &__form__input {
+    width: 15vw;
+  }
+}
+
+.car-info-form-container {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 18px;
+
+  .label__tooltip {
+    font-style: normal;
+    font-weight: 250;
+    font-size: 12px;
+    line-height: 100%;
+    color: #979797;
+    margin-left: 10px;
+    margin-right: 4px;
+  }
+}
+.form-group__item {
+  display: flex;
+  flex-direction: column;
+
+  &_label {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #343e48;
   }
 
-    .car-info-form-container {
-      width: 100%;
-      display: grid;
-      grid-template-columns: 1fr 1fr 1fr 1fr;
-      gap: 18px;
+  &_select,
+  &-input {
+    margin-top: 10px;
+    width: 100%;
+    background: #f2f4f7;
+    border-radius: 8px;
+    padding: 17.5px 10px;
+  }
+  &_options {
+    margin-top: 24px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
 
-      .label__tooltip {
-        font-style: normal;
-        font-weight: 250;
-        font-size: 12px;
-        line-height: 100%;
-        color: #979797;
-        margin-left: 10px;
-        margin-right: 4px;
-    }
+    .checkbox {
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+      accent-color: #72879e;
 
-    }
-    .form-group__item {
-      display: flex;
-      flex-direction: column;
-
-      &_label {
+      .form-group__item--label {
         font-weight: 400;
         font-size: 16px;
         line-height: 24px;
         color: #343e48;
       }
+    }
+  }
+}
+.car-info-item-telematic {
+  margin-top: 4px;
+  display: flex;
+  align-items: center;
+  flex-direction: row;
 
-      &_select,
-      &-input {
-        margin-top: 10px;
-        width: 100%;
-        background: #f2f4f7;
-        border-radius: 8px;
-        padding: 17.5px 10px;
-      }
-      &_options {
-        margin-top: 24px;
-        display: flex;
-        align-items: center;
-        flex-direction: row;
+  &__checkbox {
+    width: 20px;
+    height: 20px;
+    margin-right: 10px;
+    accent-color: #72879e;
+  }
 
-        .checkbox {
-          width: 20px;
-          height: 20px;
-          margin-right: 10px;
-          accent-color: #72879e;
+  &__label {
+    font-family: 'Gilroy';
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #343e48;
+    margin-left: 5px;
+  }
+}
 
-          .form-group__item--label {
-            font-weight: 400;
-            font-size: 16px;
-            line-height: 24px;
-            color: #343e48;
-          }
-        }
-      }
-    }
-    .car-info-item-telematic {
-      margin-top: 4px;
-      display: flex;
-      align-items: center;
-      flex-direction: row;
-  
-      &__checkbox {
-        width: 20px;
-        height: 20px;
-        margin-right: 10px;
-        accent-color: #72879e;
-      }
-  
-      &__label{
-          font-family: 'Gilroy';
-          font-weight: 400;
-          font-size: 16px;
-          line-height: 24px;
-          color: #343e48;
-          margin-left: 5px;
-      }
-    }
+.form-container-toggle {
+  display: flex;
+  flex-direction: column;
+  height: 20vh;
 
-    .form-container-toggle {
-      display: flex;
-      flex-direction: column;
-      height: 20vh;
+  &__label {
+    margin-left: 10px;
+  }
 
-      &__label {
-        margin-left: 10px;
-      }
+  &__wrapper {
+    display: flex;
+  }
+}
+.car-body-type {
+  display: flex;
+  flex-direction: column;
 
-      &__wrapper {
-        display: flex;
-      }
+  &__title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 140%;
+    color: #343e48;
+  }
 
-     
-    }
-    .car-body-type {
-      display: flex;
-      flex-direction: column;
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 10px;
 
-      &__title {
-        font-style: normal;
-        font-weight: 500;
-        font-size: 16px;
-        line-height: 140%;
-        color: #343E48;
-      }
+    &--button {
+      padding: 6px 10px;
+      background: #f2f4f7;
+      color: #343e48;
+      border-radius: 20px;
+    }
+  }
+}
 
-      &__list {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 10px;
+.active {
+  background: #72879e !important;
+  color: #ffffff !important;
+}
 
-        &--button {
-          padding: 6px 10px;
-          background: #f2f4f7;
-          color: #343e48;
-          border-radius: 20px;
-        }
-      }
-    }
+.toggle-switch {
+  position: relative;
+  display: block;
+  width: 48px;
+  height: 20px;
+}
 
-    .active {
-      background: #72879e !important;
-      color: #ffffff !important;
-    }
+.toggle-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-    .toggle-switch {
-      position: relative;
-      display: block;
-      width: 48px;
-      height: 20px;
-    }
-    
-    .toggle-switch input {
-      opacity: 0;
-      width: 0;
-      height: 0;
-    }
-    
-    .toggle-slider {
-      position: absolute;
-      cursor: pointer;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: #CAD2DA;
-      -webkit-transition: .4s;
-      transition: .4s;
-    }
-    
-    .toggle-slider:before {
-      position: absolute;
-      content: "";
-      width: 16px;
-      height: 16px;
-      left: 3px;
-      bottom: 2px;
-      background-color: white;
-      -webkit-transition: .4s;
-      transition: .4s;
-    }
-    
-    input:checked + .toggle-slider {
-      background-color: #72879E;
-    }
-    
-    input:focus + .toggle-slider {
-      box-shadow: 0 0 1px #72879E;
-    }
-    
-    input:checked + .toggle-slider:before {
-      -webkit-transform: translateX(26px);
-      -ms-transform: translateX(26px);
-      transform: translateX(26px);
-    }
-  
-    .toggle-slider.round {
-      border-radius: 34px;
-    }
-    
-    .toggle-slider.round:before {
-      border-radius: 50%;
-    }
-   
+.toggle-slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #cad2da;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.toggle-slider:before {
+  position: absolute;
+  content: '';
+  width: 16px;
+  height: 16px;
+  left: 3px;
+  bottom: 2px;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+input:checked + .toggle-slider {
+  background-color: #72879e;
+}
+
+input:focus + .toggle-slider {
+  box-shadow: 0 0 1px #72879e;
+}
+
+input:checked + .toggle-slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+.toggle-slider.round {
+  border-radius: 34px;
+}
+
+.toggle-slider.round:before {
+  border-radius: 50%;
+}
