--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.html
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.html
@@ -1,10 +1,6 @@
 <div class="owner-container">
   <div class="owner-title">Кредитные и страховые продукты</div>
-  <form
-    class="owner-form"
-    [formGroup]="formOwnerOptions"
-    (ngSubmit)="onSubmitForm(formOwnerOptions)"
-  >
+  <form class="owner-form" [formGroup]="formOwnerOptions">
     <div class="owner-products-container">
       <div class="owner-products">
         <fieldset class="owner-products-item">
@@ -110,7 +106,8 @@
                 *ngFor="let typeOfGender of genders; index as i"
                 type="button"
                 [ngClass]="{ active: selectedGenderIndex === i }"
-                (click)="activateGenderClass(i)">
+                (click)="activateGenderClass(i)"
+              >
                 {{ typeOfGender }}
               </button>
             </div>
@@ -191,7 +188,8 @@
                   class="marital-status__list--button"
                   *ngFor="
                     let typeOfMaritalStatus of maritalStatuses;
-                    index as i"
+                    index as i
+                  "
                   type="button"
                   [ngClass]="{ active: selectedMaritalStatusIndex === i }"
                   (click)="activateMaritalStatusClass(i)"
@@ -238,14 +236,22 @@
                 </label>
               </fieldset>
             </div>
-            <div>
-              <button type="submit" class="owner-personal-information-button">
-                Далее
-              </button>
-            </div>
+
+            <app-submit-form-button
+              [formValues]="formOwnerOptions.value"
+              [isDisable]="!formOwnerOptions.valid"
+              buttonText="Далее"
+            ></app-submit-form-button>
+
+            <!-- <button
+              class="next-page__button"
+              mat-button
+              [disabled]="!formOwnerOptions.valid"
+            >
+              Далее
+            </button> -->
           </div>
         </div>
-        <div></div>
       </div>
     </div>
   </form>
