created common-data service

--- a/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
+++ b/src/app/pages/calculation-loan-page/components/owner/owner.component.scss
@@ -87,6 +87,7 @@
     box-shadow: 2px 2px 19px rgba(52, 62, 72, 0.21);
     border-radius: 20px;
     background: #fefefe;
+    padding: 20px;
 
     &__item_label {
       display: flex;
