--- a/src/app/shared/components/filter-input/filter-input.component.html
+++ b/src/app/shared/components/filter-input/filter-input.component.html
@@ -8,6 +8,6 @@
     type="text"
     class="form-group__item--input"
     placeholder="Поиск"
-    formControlName="serchFormInput"
+    formControlName="searchFormInput"
   />
 </form>
